--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,18 @@
 {
   "cli": {
-    "version": ">= 3.0.0"
+    "version": ">= 16.10.1",
+    "appVersionSource": "remote"
   },
   "build": {
-    "preview": {
+    "development": {
       "developmentClient": true,
       "distribution": "internal"
     },
+    "preview": {
+      "distribution": "internal"
+    },
     "production": {
-      "android": {
-        "workflow": "managed"
-      }
+      "autoIncrement": true
     }
   },
   "submit": {
